--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "gsap": "^3.10.0",
     "inputmask": "^5.0.7",
     "locomotive-scroll": "^4.1.4",
+    "npm-kit-toggle": "^1.1.0",
     "swiper": "^7.4.1"
   }
 }
